tests/negative/scope/define-class-twice-same-package/test.smol
package testing;

class Test {}
class Alpha {}
